--- a/bitbucket-pipelines.yaml
+++ b/bitbucket-pipelines.yaml
@@ -1,7 +1,7 @@
 image: python:3.5.1
 pipelines:
   branches:
-    master:
+    main:
       - step:
           script:
             - pipe: atlassian/aws-s3-deploy:0.2.1
