--- a/.github/workflows/update-website.yml
+++ b/.github/workflows/update-website.yml
@@ -1,9 +1,9 @@
 name: updating website
 
 run-name: ${{ github.actor }} is updating the website
-on: [push]
+on: [workflow_dispatch]
 jobs:
-  update-disclosure:
+  update-s3-website:
     runs-on: ubuntu-latest
     steps:
 
@@ -12,9 +12,6 @@ jobs:
       - run: |
           sudo apt update -y
           sudo wget http://archive.ubuntu.com/ubuntu/pool/universe/p/pdftk/pdftk_2.02-5_amd64.deb
-          sudo apt-get install pdftk-java
-          sudo dpkg -i pdftk_2.02-5_amd64.deb
-          pdftk --version
       - uses: aws-actions/configure-aws-credentials@v2
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
@@ -25,6 +22,7 @@ jobs:
           role-duration-seconds: 1200
           role-session-name: MySessionName        
       - run: |
-          aws s3 ls
+          ls -la
+#######          aws s3 sync s3://halab.info 
 
 #######
