--- a/.github/workflows/launch-cloud-formation-stack.yaml
+++ b/.github/workflows/launch-cloud-formation-stack.yaml
@@ -1,4 +1,4 @@
-name: updating website
+name: launch CloudFormation template
 
 run-name: ${{ github.actor }} is updating the website
 on: [push]
@@ -21,5 +21,6 @@ jobs:
           role-duration-seconds: 1200
           role-session-name: MySessionName        
       - run: |
+          cd CloudFormation
           ls -la
-          aws s3 sync . s3://halab.info
+          aws cloudformation create-stack --stack-name soup --template-body file://pudding.yaml
