--- a/.github/workflows/launch-cloud-formation-stack.yaml
+++ b/.github/workflows/launch-cloud-formation-stack.yaml
@@ -1,6 +1,6 @@
 name: launch CloudFormation template
 
-run-name: ${{ github.actor }} is updating the website
+run-name: ${{ github.actor }} is sharing a new recipe 
 on: [push]
 jobs:
   update-s3-website:
@@ -23,4 +23,4 @@ jobs:
       - run: |
           cd CloudFormation
           ls -la
-          aws cloudformation create-stack --stack-name soup --template-body file://pudding.yaml
+          aws cloudformation create-stack --stack-name pudding --template-body file://pudding.yaml
